--- a/footer.html
+++ b/footer.html
@@ -1,49 +1,59 @@
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-
 <!-- Footer -->
-<footer class="page-footer font-small special-color-dark pt-4">
-
-  <!-- Footer Elements -->
+<footer class="page-footer font-small" id="footer">
+  <!-- Footer Links -->
   <div class="container">
+    <!-- Grid row-->
+    <div class="row text-center d-flex justify-content-center pt-5 mb-3">
+      <!-- Grid column -->
+      <div class="col-md-2 mb-3">
+        <h6 class="text-uppercase font-weight-bold">
+          <a href="#!">About Me</a>
+        </h6>
+      </div>
+      <!-- Grid column -->
 
-    <!-- Social buttons -->
+      <!-- Grid column -->
+      <div class="col-md-2 mb-3">
+        <h6 class="text-uppercase font-weight-bold">
+          <a href="#!">Help</a>
+        </h6>
+      </div>
+      <!-- Grid column -->
+
+    </div>
+    <!-- Grid row-->
+    <hr class="rgba-white-light" style="margin: 0 15%;">
+
+    <!-- Grid row-->
+    <div class="row d-flex text-center justify-content-center mb-md-0 mb-4">
+      <!-- Grid column -->
+      <div class="col-md-8 col-12 mt-5">
+        <div id="footer-about-me">
+          <h3>About Me</h3>
+          <p style="line-height: 1.7rem">First off, welcome to my website. My name is Alejandro Rosales and I am currently a senior Computer Science (CS) Major at Miami University, also minoring in Philosophy. My favorite subjects in CS are complexity theory and algorithms. In my free time I love programming and I like learning about neuroscience and physics. So yeah that's a bit about me, I hope you enjoy my website.
+          </p>
+        </div>
+      </div>
+      <!-- Grid column -->
+    </div>
+
+    <!-- Grid row-->
+    <hr class="clearfix d-md-none rgba-white-light" style="margin: 10% 15% 5%;">
+    <!-- Grid row-->
+
     <ul class="list-unstyled list-inline text-center">
+      <!-- <li class="list-inline-item">
+        <img src="github-mark.png" class="rounded-circle" id="img-social-link" alt="My GitHub">
+      </li> -->
       <li class="list-inline-item">
-        <a class="btn-floating btn-fb mx-1">
-          <i class="fab fa-facebook-f"> </i>
-        </a>
-      </li>
-      <li class="list-inline-item">
-        <a class="btn-floating btn-tw mx-1">
-          <i class="fab fa-twitter"> </i>
-        </a>
-      </li>
-      <li class="list-inline-item">
-        <a class="btn-floating btn-gplus mx-1">
-          <i class="fab fa-google-plus-g"> </i>
-        </a>
-      </li>
-      <li class="list-inline-item">
-        <a class="btn-floating btn-li mx-1">
-          <i class="fab fa-linkedin-in"> </i>
-        </a>
-      </li>
-      <li class="list-inline-item">
-        <a class="btn-floating btn-dribbble mx-1">
-          <i class="fab fa-dribbble"> </i>
-        </a>
+        <a id="github-link" href="https://github.com/AlejandroJRosales">Github</a>
       </li>
     </ul>
     <!-- Social buttons -->
-
-  </div>
-  <!-- Footer Elements -->
+  <!-- Footer Links -->
 
   <!-- Copyright -->
-  <div class="footer-copyright text-center py-3">© 2020 Copyright:
-    <a href="https://mdbootstrap.com/"> MDBootstrap.com</a>
+  <div class="footer-copyright text-center py-3">© 2020 Copyright: Alejandro Rosales</a>
   </div>
   <!-- Copyright -->
 
