--- a/nav.html
+++ b/nav.html
@@ -2,8 +2,8 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="index.html">Theoretical Computer Science</a>
+<nav class="navbar navbar-expand-lg" id="nav-bar">
+  <a class="navbar-brand" href="index.html" id="nav-bar-text">Theoretical Computer Science</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -17,11 +17,12 @@
         <a class="nav-link" href="#">Link</a>
       </li> -->
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link dropdown-toggle" href="#" id="nav-bar-text" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Topics
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="algorithmicanalysis.html">Algorithm Analysis</a>
+          <a class="dropdown-item" href="index.html">Home</a>
+          <a class="dropdown-item" href="algorithmicanalysis.html">Algorithmic Analysis</a>
           <a class="dropdown-item" href="#">Graphs</a>
           <a class="dropdown-item" href="pandnp.html">P & NP</a>
           <a class="dropdown-item" href="#">SAT & 3-SAT</a>
@@ -36,7 +37,7 @@
     <form class="form-inline">
       <div class="md-form my-0">
         <!-- Ideally this will search the whole website, like find and include text in websites and topics -->
-        <input type="text" class="form-control mr-sm-2"  id="nav-search-bar" placeholder="Find Word/Sentence Accross Website" aria-label="Search">
+        <input type="text" class="form-control mr-sm-2"  id="nav-search-bar" placeholder="Search Term Everywhere" aria-label="Search">
         <button type="submit" class="btn btn-outline-light" id="find-button">Find</button>
       </div>
     </form>
