--- a/algorithmicanalysis.html
+++ b/algorithmicanalysis.html
@@ -11,13 +11,12 @@
 	<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
 	</script>
 
-	<script type="text/javascript" id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js">
-	</script>
-
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js">
 	</script>
 
 	<link rel="stylesheet" href="style.css">
+
+  <meta name=”viewport” content=”width=device-width, initial-scale=1″>
 
 	<title>Algorithmic Analysis - Theoretical Computer Science</title>
 </head>
@@ -78,9 +77,9 @@
       <p id="psuedo-code">
       algorithm Insertion Sort(List L)
           i = 0
-          <b>while</b> i < length(L)
+          <b>while</b> i &lt; length(L)
                   j = i 
-                  <b>while</b> j > i <b>and</b> L[j-1] > L[j]
+                  <b>while</b> j &gt; i <b>and</b> L[j-1] &gt; L[j]
                           <b>swap</b> L[j] and L[j-1]  
                           j = j - 1
                   <b>end while</b>
@@ -101,7 +100,7 @@
         <p>This is called a <i>best case time complexity</i>. Why, well because this is the best case scenario for the algorithm. This will be the least amount of time an algorithm could theoretically operate in. This is best-case time complexity is denoted with \(\Omega\), a.k.a. Big-Omega.</p>
 
         <div id="best-case-equation">
-          <h5 id="equation-section-header">Best-Case Time Complexity Equation</h6>
+          <h5 id="equation-section-header">Best-Case Time Complexity Equation</h5>
         
           <p>Mathematically, it is described by the following equation:</p>
 
@@ -124,9 +123,13 @@
           <h5 id="math-notation">$$\exists \, c, n_{0} \; s.t. \; 0 \leq cg(n) \leq f(n)$$</h5>
 
           <p>Now, to concatenate the last two parts together. This segment of the equation is saying that there exists two constants \(c\) and \(n_{0}\) such that our lower-bounds of the original asymptotic function \(cg(n)\) lies at or below the original asymptotic function \(f(n)\) or at or above \(0\).</p>
+          
+          <p>So putting it all together and we have the equation: </p>
+          <h5 id="math-notation">$$\Omega(g(n)) = \exists \, c > 0, n_{0} > 0\; s.t. \; 0 \leq cg(n) \leq f(n) \;\;\; \forall \, n \geq n _{0}$$</h5>
+          <p>From what we have learned we can say that this equation here says that there exists a constant \(c\) and \(n\), \(c\) being runtime constants, that are greater than 0 such that our lower-bound exists between 0 and the original asymptotic function.</p>
 
           <!-- go on to explain and pieace together the rest of the equation. Also make sure this whole thing builds off eachother. Meaning, explain what asymptotic means, because the word is used later. And it would not make much sense to have an intro to teach newer people but then expect them to know what asymptotic means. So make sure it builds off eachother. This is going to be a long page, like a CRASH COURSE so yeah. -->
-        </div> 
+        </div>
       </div>
     </div>    
     <!-- <h5 id="math-notation">$$\exists c, n_{0} \in |f(n)| \leq c|g(n)| \forall n \geq n _{0}$$</h5> -->
