--- a/footer.html
+++ b/footer.html
@@ -1,5 +1,5 @@
 <!-- Footer -->
-<footer class="page-footer font-small" id="footer">
+<footer class="page-footer font-small" class="footer">
   <!-- Footer Links -->
   <div class="container">
     <!-- Grid row-->
@@ -28,7 +28,7 @@
     <div class="row d-flex text-center justify-content-center mb-md-0 mb-4">
       <!-- Grid column -->
       <div class="col-md-8 col-12 mt-5">
-        <div id="footer-about-me">
+        <div class="footer-about-me">
           <h3>About Me</h3>
           <p style="line-height: 1.7rem">First off, welcome to my website. My name is Alejandro Rosales and I am currently a senior Computer Science (CS) Major at Miami University, also minoring in Philosophy. My favorite subjects in CS are complexity theory and algorithms. In my free time I love programming and I like learning about neuroscience and physics. So yeah that's a bit about me, I hope you enjoy my website.
           </p>
@@ -43,10 +43,10 @@
 
     <ul class="list-unstyled list-inline text-center">
       <!-- <li class="list-inline-item">
-        <img src="github-mark.png" class="rounded-circle" id="img-social-link" alt="My GitHub">
+        <img src="github-mark.png" class="rounded-circle" class="img-social-link" alt="My GitHub">
       </li> -->
       <li class="list-inline-item">
-        <a id="github-link" href="https://github.com/AlejandroJRosales">Github</a>
+        <a class="github-link" href="https://github.com/AlejandroJRosales">Github</a>
       </li>
     </ul>
     <!-- Social buttons -->
