--- a/index.html
+++ b/index.html
@@ -13,28 +13,28 @@
     <script src="script.js"></script>
 
     <!--Navigation bar-->
-    <div id="nav-placeholder"></div>
+    <div class="nav-placeholder"></div>
     <!--end of Navigation bar-->
 
-    <div id="side-bar-about">
+    <div class="side-bar-about">
       <br>
       <h1><i>Alejandro Rosales</i></h1>
       <h5>- Author</h5>
       <hr>
       <h3>About TCS Website</h3>
       <p>I made this website for two main reasons. One, is because I have been in the position where the information I find is either too novice, or too advanced to understand. So, I wanted to help others by creating a website that progresses from an intro knowledge level to a more in depth analysis, thus creating a spectrum of information on the topic. The second reason is because I like theoretical computer science so I enjoy writing about it and teaching it in my free time.</p>
-      <hr id="about-hr">
-      <h3 id="section-header">About Me Technical</h3>
+      <hr class="about-hr">
+      <h3 class="section-header">About Me Technical</h3>
       <p>First off, welcome to my website. My name is Alejandro Rosales and I am currently a senior Computer Science (CS) Major at Miami University, also minoring in Philosophy. My favorite subjects in CS are complexity theory and algorithms. Programming languages I know include Python, Java, C#, R, and C++. The fields I am most knoweldgeable in are Complexity Theory, Algorithms, Data Structures, and Machine Learning/Artificial Intelligence. In my free time I love programming. Things I program in my free time include encryption algorithms, machine learning algorithms, simulations, and now websites! I am also working on publishing a paper on a sorting algorithm I created, so hopefully I can like that soon!</p>
-      <hr id="about-hr">
-      <h3 id="section-header">About Me Fun</h3>
+      <hr class="about-hr">
+      <h3 class="section-header">About Me Fun</h3>
       <p>Now, I enjoy doing other things as well. I like learning about neuroscience and physics, and I like composing music for fun, even if it is not very good, and I sometimes play chess. I also enjoy spending time with family and friends most! So yeah that's a bit about me, I hope you enjoy my website.</p>
       <br>
       <br>
     </div>
 
     <!--Footer bar-->
-    <!-- <div id="footer-placeholder"></div> -->
+    <!-- <div class="footer-placeholder"></div> -->
     <!--end of Footer bar-->
   </body>
 
