Mobile First Fixes

--- a/footer.html
+++ b/footer.html
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
+
 <!-- Footer -->
 <footer class="page-footer font-small" class="footer">
   <!-- Footer Links -->
@@ -30,7 +32,7 @@
       <div class="col-md-8 col-12 mt-5">
         <div class="footer-about-me">
           <h3>About Me</h3>
-          <p style="line-height: 1.7rem">First off, welcome to my website. My name is Alejandro Rosales and I am currently a senior Computer Science (CS) Major at Miami University, also minoring in Philosophy. My favorite subjects in CS are complexity theory and algorithms. In my free time I love programming and I like learning about neuroscience and physics. So yeah that's a bit about me, I hope you enjoy my website.
+          <p style="line-height: 1.7rem">Welcome to my website. My name is Alejandro Rosales and I am currently a senior Computer Science (CS) Major at Miami University, also minoring in Philosophy. My favorite subjects in CS are complexity theory and algorithms. In my free time I love programming and I like learning about neuroscience and physics. So yeah that's a bit about me, I hope you enjoy my website.
           </p>
         </div>
       </div>
@@ -41,21 +43,18 @@
     <hr class="clearfix d-md-none rgba-white-light" style="margin: 10% 15% 5%;">
     <!-- Grid row-->
 
-    <ul class="list-unstyled list-inline text-center">
-      <!-- <li class="list-inline-item">
-        <img src="github-mark.png" class="rounded-circle" class="img-social-link" alt="My GitHub">
-      </li> -->
-      <li class="list-inline-item">
-        <a class="github-link" href="https://github.com/AlejandroJRosales">Github</a>
-      </li>
-    </ul>
-    <!-- Social buttons -->
-  <!-- Footer Links -->
+    <div id="contact">
+      <h3>Contact.<hr></h3>
+		  <p>Feel free to contact me on my social media.</p>
+		  <div class="social-media">
+			  <a href="#" target="_blank"><i class='fab fa-github'></i></a>
+			  <a href="#" target="_blank"><i class='fab fa-linkedin-in'></i></a>
+			  <a href="#" target="_blank"><i class="fab fa-facebook"></i></a>
+		  </div>
+		</div>
 
-  <!-- Copyright -->
-  <div class="footer-copyright text-center py-3">© 2020 Copyright: Alejandro Rosales</a>
+    <!-- Copyright -->
+    <a class="footer-copyright text-center py-3">© 2020 Copyright: Alejandro Rosales</a>
   </div>
-  <!-- Copyright -->
-
 </footer>
 <!-- Footer -->
