--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <!-- Get Style Sheets and JS from Bootstrap -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>Home - Theoretical Computer Science</title>
   </head>
@@ -25,7 +30,7 @@
       <p>I made this website for two main reasons. One, is because I have been in the position where the information I find is either too novice, or too advanced to understand. So, I wanted to help others by creating a website that progresses from an intro knowledge level to a more in depth analysis, thus creating a spectrum of information on the topic. The second reason is because I like theoretical computer science so I enjoy writing about it and teaching it in my free time.</p>
       <hr class="about-hr">
       <h3 class="section-header">About Me Technical</h3>
-      <p>First off, welcome to my website. My name is Alejandro Rosales and I am currently a senior Computer Science (CS) Major at Miami University, also minoring in Philosophy. My favorite subjects in CS are complexity theory and algorithms. Programming languages I know include Python, Java, C#, R, and C++. The fields I am most knoweldgeable in are Complexity Theory, Algorithms, Data Structures, and Machine Learning/Artificial Intelligence. In my free time I love programming. Things I program in my free time include encryption algorithms, machine learning algorithms, simulations, and now websites! I am also working on publishing a paper on a sorting algorithm I created, so hopefully I can like that soon!</p>
+      <p>First off, welcome to my website. My name is Alejandro Rosales and I am currently a senior Computer Science (CS) Major at Miami University, also minoring in Philosophy. My favorite subjects in CS are complexity theory and algorithms. Programming languages I know include Python, Java, C#, R, and C++. Also, as you can see I know HTML, CSS, and Javascript/JQuery/Ajax. The fields I am most knoweldgeable in are Complexity Theory, Algorithms, Data Structures, and Machine Learning/Artificial Intelligence. In my free time I love programming. Things I program in my free time include encryption algorithms, machine learning/AI algorithms, stock trading algorithms, simulations, and now websites! I am also working on publishing a paper on a sorting algorithm I created, so hopefully I can link that soon!</p>
       <hr class="about-hr">
       <h3 class="section-header">About Me Fun</h3>
       <p>Now, I enjoy doing other things as well. I like learning about neuroscience and physics, and I like composing music for fun, even if it is not very good, and I sometimes play chess. I also enjoy spending time with family and friends most! So yeah that's a bit about me, I hope you enjoy my website.</p>
