--- a/randomizationalgorithms.html
+++ b/randomizationalgorithms.html
@@ -29,7 +29,7 @@
 	<div class="nav-placeholder" id="nav-placeholder"></div>
 	<!--end of Navigation bar-->
 
-	<div class="div-information">
+	<div class="information">
 		<h1>Randomized Algorithms</h1>
 		<h4>From Intro To College Level Crash Course</h4>
     <span class="dot"></span><p><i>Still Adding To This</i></p>
