--- a/pandnp.html
+++ b/pandnp.html
@@ -26,7 +26,7 @@
     <div class="nav-placeholder" id="nav-placeholder"></div>
     <!--end of Navigation bar-->
 
-    <div class="div-information">
+    <div class="information">
       <h1>P and NP</h1>
       <h4>From Intro to College Level Crash Course</h4>
       <span class="dot"></span><p><i>Still Adding To This</i></p>
